# AI-CONTRACT-PLATFORM

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/ai-service/: .env.example  package.json  requirements.txt
apps/ai-service/app/: config.py  main.py
apps/ai-service/app/agents/: clause_extractor.py  compliance_checker.py  contract_analyzer.py  entity_extractor.py  (+2 more)
apps/ai-service/tests/: test_smoke.py
apps/api/: package.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/notification-service/: .env.example  package.json
apps/notification-service/src/: app.module.ts  main.ts
apps/ocr-service/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt
apps/ocr-service/app/: __init__.py  config.py  main.py
apps/ocr-service/app/api/v1/: __init__.py  health.py  ocr.py
apps/ocr-service/app/core/: document_processor.py  metrics.py  ocr_engine.py
apps/ocr-service/app/schemas/: ocr.py
apps/ocr-service/scripts/: run-pytest.js
apps/ocr-service/tests/: test_smoke.py
apps/web/: .eslintrc.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: theme-provider.tsx
apps/web/lib/: api.ts  useAuth.ts
components/dashboard/: header.tsx  sidebar.tsx
components/ui/: card.tsx
docs/: ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  ROADMAP.md
infrastructure/docker/: Dockerfile.ai  Dockerfile.api  Dockerfile.web  docker-compose.yml
infrastructure/nginx/: nginx.conf
scripts/: setup-dev.sh  setup.ps1
(+62 files in other folders)
