[tool.poetry]
name = "ocr-service"
version = "0.1.0"
description = "OCR and document processing service for AI Contract Review Platform"
authors = ["Contract AI Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.0"

# OCR Engines
paddleocr = "^2.7.3"
paddlepaddle = "^2.6.0"
pytesseract = "^0.3.10"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"

# Document Processing
pymupdf = "^1.23.26"
python-docx = "^1.1.0"
docling = "^1.0.0"
unstructured = {extras = ["all-docs"], version = "^0.11.0"}
pdf2image = "^1.16.3"

# AI & Embeddings
openai = "^1.10.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"

# HTTP Client
httpx = "^0.26.0"
requests = "^2.31.0"

# Logging & Monitoring
loguru = "^0.7.2"
prometheus-client = "^0.19.0"

# Background Tasks
celery = "^5.3.6"
redis = "^5.0.1"

# Database
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
